--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Galaxy Land</title>
-    <script type="module" crossorigin src="/assets/index.6894aa20.js"></script>
+    <title>Vite App</title>
+    <script type="module" crossorigin src="/assets/index.d166c1eb.js"></script>
     <link rel="stylesheet" href="/assets/index.a14c8f93.css">
   </head>
   <body>
