--- a/mobile/index.html
+++ b/mobile/index.html
@@ -6,6 +6,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta name="description" content="Galaxy Land">
     <meta name="msapplication-TileColor" content="#fff">
     <meta name="theme-color" content="#fff">
