--- a/mobile/index.html
+++ b/mobile/index.html
@@ -502,7 +502,7 @@
                             <div class="routeMap-man-list-p">
                                 <p> ● Official website launch </p>
                                 <p> ● Pre-sale investment finalized</p>
-                                <P>Land airdrop(Airdrop based on snapshot of token holding ratio)</P>
+                                <P>● Land airdrop(Airdrop based on snapshot of token holding ratio)</P>
                                 <p> ● Social media(Twitter TG) launch </p>
                                 <p> ● Genesis collection airdrop(Airdrop based on snapshot of token holding ratio)</p>
                             </div>
@@ -651,7 +651,7 @@
                             $('.address-panel').hide();
                             $('.share-panel').show();
 
-                            $('.text-primary').html(res.data.data.count)
+                            $('.text-primary').html(res.data.data.tokenAmount)
 
                             if (res.data.airDrop) {
                                 $('#withdraw').addClass('BBackground')
