--- a/mobile/index_cn.html
+++ b/mobile/index_cn.html
@@ -645,7 +645,7 @@
                             $('.address-panel').hide();
                             $('.share-panel').show();
 
-                            $('.text-primary').html(res.data.data.count)
+                            $('.text-primary').html(res.data.data.tokenAmount)
 
                             if (res.data.airDrop) {
                                 $('#withdraw').addClass('BBackground')
