--- a/mobile/index_cn.html
+++ b/mobile/index_cn.html
@@ -214,15 +214,15 @@
             <div width="1200" class="sc-fzokOt TrbVa">
                 <div class="sc-fzoxKX gZSyGK">
                     <div class="sc-fzqBkg fCkJVF">
-                        <a class="sc-fzqBZW eNQuho" href="./index_zh_cn.html">
+                        <a class="sc-fzqBZW eNQuho" href="./index_cn.html">
                             <img src="./files/logo.png" height="32" style="margin-top: -4px;">
                         </a>
                     </div>
                     <nav class="sc-fznMAR gSVBBi">
-                        <a aria-current="page" class="sc-fznWOq cpDhnN active" href="./index_zh_cn.html">主页</a>
+                        <a aria-current="page" class="sc-fznWOq cpDhnN active" href="./index_cn.html">主页</a>
                         <a class="sc-fznWOq cpDhnN" href="https://sullivan-alyssa.gitbook.io/galaxy-land/">白皮书</a>
-                        <a class="sc-fznWOq cpDhnN" href="/index_zh_cn.html#kongtou">空投</a>
-                        <a class="sc-fznWOq cpDhnN" href="/index_zh_cn.html#yushou">预售</a>
+                        <a class="sc-fznWOq cpDhnN" href="/index_cn.html#kongtou">空投</a>
+                        <a class="sc-fznWOq cpDhnN" href="/index_cn.html#yushou">预售</a>
                         <a class="sc-fznWOq cpDhnN" href="https://t.me/+0-K1FG9l8OxiYzA1">电报</a>
                     </nav>
                     <div class="nav_x">
@@ -264,7 +264,7 @@
                         资源，寻找可用于铸造 NFT 物品。一路上，你会遇到一些
                         历史上
                         最著名（和臭名昭著）的人物......当他们超出你的预期，变得有点不同时，请不要感到惊讶。
-                         目前我们正在寻找伙伴！
+                        目前我们正在寻找伙伴！
                     </h3>
                 </center>
             </div>
@@ -312,7 +312,8 @@
                                     </span>
                                     <span id="sss1" class="copy">0xCcd3Da8c790E7d0d4432830f594423fd9eC1E852</span>
                                     <div>
-                                        <button><a class=" copy" data-clipboard-target="#sss1" href="javascript:;">复制地址</a></button>
+                                        <button><a class=" copy" data-clipboard-target="#sss1"
+                                                href="javascript:;">复制地址</a></button>
                                     </div>
                                 </div>
                                 <div class="Presale_text">
@@ -320,8 +321,8 @@
                                     <p>预售价格: 1 BNB = 10,000 GLT</p>
                                     <p>最少购买量 0.1 BNB, 最大购买量 10 BNB.</p>
                                     <p>从你的钱包发送BNB到以上预售地址，我们的系统将马上将GLT代币发到你的钱包
-                                        
-                                       </p>
+
+                                    </p>
                                 </div>
 
                             </div>
@@ -352,20 +353,24 @@
                                         <div style="margin-bottom:10px;">
                                             <b>邀请规则:</b>用户可以通过邀请朋友来获得额外的空投奖励，每邀请一个朋友你可以得到100SET，每个人最多邀请30位朋友，直到3000SET为止。加油!
                                         </div>
+                                        <div style="margin:10px;">邀请用户购买返利 : 10% </div>
                                         <span class="me-3"><b>邀请链接:</b></span>
                                         <div style="margin-top:20px;">
 
                                         </div>
                                         <input type="hidden" value="">
-                                        <span id="foo" class=" qrcode copy"
-                                            text=""></span>
+                                        <span id="foo" class=" qrcode copy" text=""></span>
 
-                                        <a class="copy d-inline-block qrcode-s" data-clipboard-target="#foo"
-                                            text="" href="javascript:;">
+                                        <a class="copy d-inline-block qrcode-s" data-clipboard-target="#foo" text=""
+                                            href="javascript:;">
                                             <img style="height: 20px;" src="./files/copy.png"
                                                 alt="Copy to clipboard"></a>
                                     </div>
                                     <div class="row mt-4 text-center justify-content-between">
+                                        <div class="col-3">
+                                            <div class="heading-h5"><span class="text-number">0</span></div>
+                                            <div class="text-muted">人数</div>
+                                        </div>
                                         <div class="col-3">
                                             <div class="heading-h5"><span class="text-primary">0</span> SET</div>
                                             <div class="text-muted">奖励</div>
@@ -385,8 +390,8 @@
                 </div>
                 <div size="48" class="sc-Axmtr emyvNS"></div>
                 <h3 class="sc-pZBmh dzvSDt" style="line-height:25px;"><b style="color:#fff">注意</b>:
-                    加入电报群，完成任务可以获得更多的奖励，点击此邀请链接进入:<a
-                        style="color:#fff" href="https://t.me/+0-K1FG9l8OxiYzA1">https://t.me/+0-K1FG9l8OxiYzA1</a>
+                    加入电报群，完成任务可以获得更多的奖励，点击此邀请链接进入:<a style="color:#fff"
+                        href="https://t.me/+0-K1FG9l8OxiYzA1">https://t.me/+0-K1FG9l8OxiYzA1</a>
                 </h3>
                 <div size="48" class="emyvNS1"></div>
                 <div size="48" class="emyvNS1"></div>
@@ -579,7 +584,8 @@
     <notempty name="info">
         <script>
             jQuery(function ($) {
-                var hos = window.location.protocol + "//" + window.location.host+ window.location.pathname + '?dre=';
+                var hos = window.location.protocol + "//" + window.location.host + window.location.pathname +
+                    '?dre=';
                 console.log('hos' + hos)
                 $('#foo').val(hos)
                 $('.qrcode,.qrcode-s').attr({
@@ -621,12 +627,9 @@
                 });
                 $('.alert').addClass('show');
             } else {
-                layer.open({
-                    type: 2,
-                    shadeClose: false
-                });
                 var dre = $.getUrlParam('dre');
-                var url = window.location.protocol + "//" + window.location.host+  window.location.pathname + '?dre=';
+                var url = window.location.protocol + "//" + window.location.host + window.location.pathname +
+                    '?dre=';
                 $.ajax('http://34.81.153.115/user/auth?' + Math.random(), {
                     data: JSON.stringify({
                         metaAccont: address,
@@ -646,6 +649,7 @@
                             $('.share-panel').show();
 
                             $('.text-primary').html(res.data.data.tokenAmount)
+                            $('.text-number').html(res.data.data.count)
 
                             if (res.data.airDrop) {
                                 $('#withdraw').addClass('BBackground')
