--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" /> -->
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GALAXY LAND</title>
-    <script type="module" crossorigin src="/assets/index.260a6d03.js"></script>
-    <link rel="stylesheet" href="/assets/index.2b899378.css">
-  </head>
-  <body>
-    <div id="root"></div>
-    
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <!-- <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" /> -->
+  <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>GALAXY LAND</title>
+  <script type="module" crossorigin src="/assets/index.c48e5f2d.js"></script>
+  <link rel="stylesheet" href="/assets/index.34ca42cc.css">
+</head>
+<body>
+  <div id="root"></div>
+  
+</body>
+
 </html>
