--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <!-- <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" /> -->
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+  <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>GALAXY LAND</title>
-  <script type="module" crossorigin src="/assets/index.c48e5f2d.js"></script>
+  <script type="module" crossorigin src="/assets/index.e6782af9.js"></script>
   <link rel="stylesheet" href="/assets/index.34ca42cc.css">
 </head>
 <body>
